Copyright (c) 2002-2009 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  Silva 2.1.7 (unreleased)

    Bug fixes

      - Add a content-type for BMP images.
      - The user clipboard 'remove user' button now returns to the
        correct add user form.
      - Fix tocfilter if somehow non Silva object go through it.

  Silva 2.1.6 (2009-08-05)

    Bug fixes

      - Errors when attempting to create thumbnails from interlaced
        PNGs are now displayed to the user.

      - launchpad 400019: Silva Link: allow editing of relative /
        absolute property.  The Silva Link edit tab now allow editing
        of this property

      - ported form the trunk. A possible security issue, the "served by host foo" comment
        was removed from macro_index.pt.

      - removing with on the table class selector in the kupu toolbar
        so it is visible now in IE7

      - updating the table structure and css for the table class
        selector in the kupu toolbox so everything is aligned evenly

  Silva 2.1.5 (2009-07-29)

    Bug fixes

      - Get reference button did not work for a Ghost folder.

      - Add a traverser to a non-existant view on RessourceDirectory
        to get a 404 instead of an error.

      - Discard CodeSource parameter which are unknown in SilvaDocument
        when saving/rendering a document in kupu.

      - Check for file extension when uploading a file: you can only
        upload a file which have an extension.


  Silva 2.1.5b1 (2009-06-04)

    Bug fixes

      - fix some formatting issues with buttons in the edit tab for
        containers

      - fix an issue in the subscription service when, on the status
        tab of versioned content, the 'publish now' button is pressed
        with an expiration date < publication date AND the subscription
        service is enabled

  Silva 2.1.4 (2009-05-08)

    New features

      - Exceptions raised during the upgrade process